# fdep

./: .gitignore  CHANGELOG.md  LICENSE  README.MD  add_signatures.py  fdep.cabal  flake.nix  result
.github/workflows/: haskell.yml
app/: Main.hs
src/Fdep/: Group.hs  Plugin.hs  Types.hs
test/: Main.hs
