cabal-version:      3.0
name:               fdep
version:            0.1.0.0
synopsis:
    A plugin to dump out function dependancy graph of whole package
license:            MIT
license-file:       LICENSE
author:             eswar2001
maintainer:         teswar2001@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-options
  build-depends:       base ^>=4.14.3.0
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications

library
    import: common-options
    exposed-modules:  Fdep.Plugin Fdep.Types Fdep.Group
    build-depends:
                bytestring
                , containers
                , filepath
                , ghc ^>= 8.10.7
                , ghc-exactprint
                , unordered-containers
                , uniplate >= 1.6  && < 1.7
                , references
                , classyplate
                , aeson
                , directory
                , extra
                , aeson-pretty
    hs-source-dirs:   src
    default-language: Haskell2010

executable fdep
    import:           common-options
    main-is:          Main.hs
    build-depends: fdep
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite fdep-test
    import:           common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        fdep
    ghc-options: -fplugin=Fdep.Plugin -fplugin-opt Fdep.Plugin:./tmp/fdep/
